[gd_scene load_steps=3 format=3 uid="uid://4li0kjh5ajyx"]

[ext_resource type="PackedScene" uid="uid://buhr7ijkpwu0d" path="res://bala.tscn" id="1_s5258"]
[ext_resource type="Script" uid="uid://bo017d1onn0xw" path="res://bala_player.gd" id="2_3l341"]

[node name="Area2D" instance=ExtResource("1_s5258")]
collision_layer = 4
collision_mask = 1
script = ExtResource("2_3l341")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="hit" from="." to="." method="_on_hit"]
